# side-projects

./: .env.example  .gitignore  README.md  build_tracker_excel.py  whatsapp_task_tracker.xlsx
ie-student-services/: README.md
job-radar/: README.md
lifelong-learning/: README.md
network-agent/: alembic.ini  config.yaml.example  pyproject.toml
network-agent/network_agent/cli/: actions_cmd.py  db_cmd.py  people_cmd.py
network-agent/network_agent/core/: config.py  database.py  linking.py
network-agent/network_agent/models/: __init__.py  actions.py  sources.py
network-agent/tests/: conftest.py  sample_actions.csv  test_people_crud.py
network_agent/: __init__.py
news-aggregator/: .env.example  README.md  config.py  fetcher.py  fly.toml  follow_up.py  main.py  notifier.py  openai_client.py  perplexity.py  persistence.py  requirements.txt  scheduler.py  storage.py  summarizer.py
people-tracker/: .gitignore  pyproject.toml  requirements.txt
people-tracker/tracker/: cli.py  db.py  instagram.py  linkedin.py
student-food-marketplace/: package.json  pnpm-lock.yaml
telegram-tracker/: .env.example  config.py  excel_store.py  google_cal.py  handlers.py  poller.py  requirements.txt  run.py  scheduler.py  setup_calendar.py  state.py  tasks.json  telegram-tracker.service  todoist.py  tracker.py
tests/: test_action_logging.py  test_db_init.py  test_dedupe_reconcile.py  test_import_export.py
whatsapp-tool/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json  send.js
whatsapp-tracker/: .env.example  README.md  config.py  excel_store.py  (+8 more)
(+63 files in other folders)
